// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SignInForm Snapshots should match snapshot in default state 1`] = `
<form
  class="space-y-4"
>
  <div
    data-testid="input-signin-email"
  >
    <label
      class="mb-1 block text-sm text-gray-700"
      for="signin-email"
    >
      Email Address *
    </label>
    <input
      data-testid="input-field-signin-email"
      id="signin-email"
      name="email"
      placeholder="your@email.com"
      required=""
      type="email"
    />
  </div>
  <div
    data-testid="input-signin-password"
  >
    <label
      class="mb-1 block text-sm text-gray-700"
      for="signin-password"
    >
      Password *
    </label>
    <input
      data-testid="input-field-signin-password"
      id="signin-password"
      name="password"
      placeholder="Enter your password"
      required=""
      type="password"
    />
  </div>
  <button
    class="w-full btn btn-login-logout mt-2"
    type="submit"
  >
    Sign In
  </button>
</form>
`;

exports[`SignInForm Snapshots should match snapshot in loading state 1`] = `
<form
  class="space-y-4"
>
  <div
    data-testid="input-signin-email"
  >
    <label
      class="mb-1 block text-sm text-gray-700"
      for="signin-email"
    >
      Email Address *
    </label>
    <input
      data-testid="input-field-signin-email"
      disabled=""
      id="signin-email"
      name="email"
      placeholder="your@email.com"
      required=""
      type="email"
    />
  </div>
  <div
    data-testid="input-signin-password"
  >
    <label
      class="mb-1 block text-sm text-gray-700"
      for="signin-password"
    >
      Password *
    </label>
    <input
      data-testid="input-field-signin-password"
      disabled=""
      id="signin-password"
      name="password"
      placeholder="Enter your password"
      required=""
      type="password"
    />
  </div>
  <button
    class="w-full btn btn-login-logout mt-2"
    disabled=""
    type="submit"
  >
    <div
      class="flex items-center"
    >
      <svg
        class="animate-spin -ml-1 mr-2 h-4 w-4 text-white"
        fill="none"
        viewBox="0 0 24 24"
      >
        <circle
          class="opacity-25"
          cx="12"
          cy="12"
          r="10"
          stroke="currentColor"
          stroke-width="4"
        />
        <path
          class="opacity-75"
          d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
          fill="currentColor"
        />
      </svg>
      Please wait...
    </div>
  </button>
</form>
`;
